<resources>
    <string name="app_name">Layani</string>
    <string name="start_title">Welcome to, Layani</string>
    <string name="tv_btn_user">User</string>
    <string name="tv_btn_admin">Admin</string>
    <string name="tv_login1">Log into</string>
    <string name="tv_login2">your account</string>
    <string name="tv_email">Email</string>
    <string name="btn_sign_in">SIGN IN</string>
    <string name="full_name">Full Name</string>
    <string name="login">Login</string>
    <string name="create_your">Create your</string>
    <string name="account">account</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="stats">Stats</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="level">Level</string>
    <string name="exp">Exp</string>
    <string name="complaint">Complaint</string>
    <string name="profile">Profile</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="todo">TODO</string>
    <string name="register">Register</string>
    <string name="done">Done</string>
    <string name="note">Note</string>
    <string name="upload_photo">Upload photo</string>
    <string name="password">Password</string>
    <string name="save">save</string>
    <string name="edit_photo">edit photo</string>
    <string name="name">Name</string>
    <string name="dashboard">Dashboard</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_user">MainActivity</string>
    <string name="add_compalint">add compalint</string>
    <string name="add_complaint">add complaint</string>
    <string name="information">Information</string>
    <string name="info_image">Info Image</string>
    <string name="gangguan_listrik">Gangguan Listrik</string>
    <string name="email">elsajub@email.com</string>
    <string name="impressive">impressive</string>
    <string name="elsa_jubaedah">Elsa Jubaedah</string>
    <string name="photo">photo</string>
    <string name="splash">Splash</string>
    <string name="yps">YPS</string>
    <string name="add_photo">add photo</string>
    <string name="ex_rank">30</string>
    <string name="must_be_8_characters">must be 8 characters</string>
    <string name="exps">Exp :</string>
    <string name="ranks">Rank :</string>
    <string name="_0">0</string>
</resources>