<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".start.StartActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_title"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_user"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/btn"
        android:text="@string/tv_btn_user"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

    <Button
        android:id="@+id/btn_admin"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn"
        android:text="@string/tv_btn_admin"
        app:layout_constraintStart_toStartOf="@+id/btn_user"
        app:layout_constraintTop_toBottomOf="@+id/btn_user"/>


</androidx.constraintlayout.widget.ConstraintLayout>