<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/base"
    tools:context="com.yps.layani.start.ui.profile.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_img"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/full_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_img" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_email"
        android:textSize="17sp"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/btn"
        android:text="@string/edit_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintVertical_bias="0.016"
        app:layout_constraintTop_toBottomOf="@id/profile_email"/>

    <TextView
        android:id="@+id/tv_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_edit"/>

    <TextView
        android:id="@+id/tv_exp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_level"
        app:layout_constraintTop_toBottomOf="@id/tv_level"/>

        <TextView
            android:id="@+id/tv_leader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/tv_exp"
            app:layout_constraintTop_toBottomOf="@id/tv_exp"
            android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="500dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/grey"
                tools:listitem="@layout/list_leader" />

        </TableRow>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>