<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/base">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/edit_img"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/eximage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_edit_photo"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:outlineSpotShadowColor="@color/base"
        android:backgroundTint="@color/base"
        android:text="@string/edit_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_img"/>

    <TextView
        android:id="@+id/tv_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="30dp"
        android:text="@string/name"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_photo"/>

    <EditText
        android:id="@+id/et_edit_name"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_photo"/>

    <TextView
        android:id="@+id/tv_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="30dp"
        android:text="@string/tv_email"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_name"/>

    <EditText
        android:id="@+id/et_edit_email"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_name"/>

    <TextView
        android:id="@+id/tv_edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="30dp"
        android:text="@string/password"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_email"/>

    <EditText
        android:id="@+id/et_edit_password"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_email"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="120dp"
        android:layout_height="36dp"
        android:layout_marginTop="50dp"
        android:text="@string/save"
        android:background="@drawable/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_edit_password" />


</androidx.constraintlayout.widget.ConstraintLayout>